<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityAddSymptoms2">

        <!-- Toolbar is the actual app bar with text and the action items -->
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <!--scrollview-->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_editor_absoluteX="0dp">

            <!--scrollview's child (container of all UI elements)-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="41.4dp"
                    android:layout_height="35.4dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_app_icon" />

                <TextView
                    android:id="@+id/up_pretitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_pretitle"
                    android:textColor="@color/black3"
                    app:layout_constraintBottom_toTopOf="@+id/up_title"
                    app:layout_constraintStart_toStartOf="@+id/up_title"
                    app:layout_constraintTop_toTopOf="@+id/up_title" />


                <TextView
                    android:id="@+id/up_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/up_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_subtitle"
                    android:textColor="@color/black3"
                    app:layout_constraintBottom_toBottomOf="@+id/up_title"
                    app:layout_constraintEnd_toEndOf="@+id/up_title"
                    app:layout_constraintTop_toBottomOf="@+id/up_title" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="83dp" />

                <!--recycler view used to populate attraction with attraction adapter-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/body_sublocation_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="75dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />

                <ProgressBar
                    android:id="@+id/s2_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="128dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/gray"
                    android:fontFamily="sans-serif-thin"
                    android:padding="10sp"
                    android:text="Select body sublocation"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:layout_editor_absoluteX="2dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Body location > "
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sublocation > "
                    android:textColor="@color/halfBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black3"
                    android:text="Symptoms > "
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black3"
                    android:text="Report"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@drawable/scroll_gradient_top"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>